2006-02-23  Chris Moller  <moller@mollerware.com>

	* src/widgets/ftkstripchart.c: Replaced librt timer_*() timers
	with glib g_timeout_add().
	* src/widgets/ftkstripchart.h: Removed unnecessary stuff for
	timer_*() timers.

2006-02-18  Sami Wagiaalla  <swagiaal@redhat.com>

	* Makefile.am: Added an explicit rule to link libftk.so in
	order to insert -lrt into the list of libraries (see bz 2353).

2006-02-06  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (CLEANFILES): Remove *.o, and *.class.  Add
	com/redhat/ftk/Stripchart.class.

2006-01-30  Andrew Cagney  <cagney@redhat.com>

	* test/widget/Makefile: Delete references to /opt/frysk.
	* test/wrapper/Makefile: Ditto.
	* test/wrapper/Makefile-vte: Ditto.
	* Makefile-native (INSTALLDIR): Replace /opt/frysk with
	/usr/local.
	* src/widgets/ftk.pc: Replace /opt/frysk with ${prefix}.
	* src/widgets/Makefile (INSTALLDIR): Replace /opt/frysk with
	/usr/local.

2006-01-27  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (EXTRA_DIST): Add src/widgets/ftkconsole.h,
	src/widgets/ftkstripchart.h, and src/widgets/ftktimeline.h.

2006-01-26  Andrew Cagney  <cagney@redhat.com>

	* src/widgets/ftkconsole.c (ftk_console_new): Delete <<i>>,
	unused.
	(ftk_console_append_text_e): Return TRUE.
	* src/widgets/ftkstripchart.c (ftk_stripchart_configure): Delete
	<<ds>>, unused.
	(ftk_stripchart_expose): Delete <<d_this>>, unsed.
	(ftk_stripchart_new): Delete <<i>>, unused.
	(ftk_stripchart_expose): Cast tv_usec.
	* Makefile.am (AM_CFLAGS): Replace CFLAGS, add -Werror and -Wall.
	(libftkjni_a_SOURCES, noinst_LIBRARIES, libftkjni_so_SOURCES) 
	(libftkjni.so, libftk_a_SOURCES, noinst_LIBRARIES)
	(libftk_so_SOURCES, libftk.so): Define.
	(.a.so): New rule.

2006-01-14  Diego Novillo  <dnovillo@redhat.com>

	* Makefile.am (CFLAGS): Add -fPIC -DPIC -std=gnu99.
	(ftkstripchart.o, ftkconsole.o): Use.
	(Stripchart.o): Add -fPIC.

2006-01-05  Andrew Cagney  <cagney@redhat.com>

	* Directory moved from frysk-imports/ to frysk-gtk/.
